--- a/knowledge-base-web/src/app/features/home/home.component.html
+++ b/knowledge-base-web/src/app/features/home/home.component.html
@@ -50,7 +50,7 @@
 
         <mat-paginator (page)="handlePageEvent($event)" [length]="paginatorParams.totalElements" [pageSize]="15"
           [pageSizeOptions]="[]" showFirstLastButtons [hidePageSize]="true" [pageIndex]="paginatorParams.currentPage"
-          [pageIndex]="paginatorParams.pageIndex" *ngIf="paginatorParams.totalElements > 15">>
+          [pageIndex]="paginatorParams.pageIndex" *ngIf="paginatorParams.totalElements > 15">
         </mat-paginator>
 
         <kb-loading [showLoading]="loading"></kb-loading>
