--- a/knowledge-base-web/src/app/features/manage/manage.component.css
+++ b/knowledge-base-web/src/app/features/manage/manage.component.css
@@ -45,7 +45,7 @@
   align-items: center;
   padding: 5px 10px;
   background: #ffffff;
-  box-shadow: 0px 3px 5px rgba(34, 34, 34, 0.6);
+  box-shadow: 0px 2px 3px #5f5f5f99;
   border: 1px solid #ded9d9;
   border-radius: 5px;
 }
@@ -56,11 +56,14 @@
   font-size: 18px;
 }
 
+.btn {
+  box-shadow: 0px 2px 4px #33323399;
+  margin-left: 10px;
+}
+
 .custom-dropdown {
   background-color: #0000ff;
   color: #ffffff;
-  box-shadow: 0px 4px 5px rgba(3, 48, 100, 0.6);
-  margin-left: 10px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -106,11 +109,29 @@
   margin-right: 4px;
 }
 
+.table-container {
+  padding: 10px;
+
+  animation-name: table-appear;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+}
+
+.table-container h4 {
+  font-size: 20px;
+  color: #383737;
+  margin-bottom: 8px;
+}
+
 .table {
+  margin: 5px !important;
   text-align: center;
   font-family: sans-serif;
   font-size: 14px;
   background-color: #fdfdfd;
+  box-shadow: 0px 4px 5px rgb(110, 105, 105);
+  border-radius: 4px;
 }
 
 .table thead th {
@@ -120,7 +141,11 @@
 }
 
 .table thead th mat-icon {
-  color: #a8a806;
+  color: #ffff17;
+}
+
+.table thead th:last-child mat-icon {
+  color: #e4e4e3;
 }
 
 .more-container {
@@ -131,7 +156,7 @@
 .more-container ul {
   position: absolute;
   width: 130px;
-  left: calc(80% - 155px);
+  right: calc(80% - 21px);
   top: calc(60% + 15px);
   background: #237cafcc;
 
@@ -188,40 +213,13 @@
   min-width: 200px;
 }
 
-.aside h2 {
-  color: #383737;
-  font-weight: bold;
-  font-size: 18px;
-  margin: 10px;
-}
-
-.aside ul {
-  margin-top: 20px;
-  margin-left: 12px;
-  font-family: "Roboto", sans-serifs;
-  color: rgb(66, 64, 64);
-  cursor: pointer;
-}
-
-.aside ul li {
-  display: flex;
-  align-items: center;
-  background-color: #f0f0f0;
-  padding: 4px;
-  border-radius: 5px;
-  font-size: 14px;
-}
-
-.aside ul li:hover {
-  color: #0000ff;
-}
-
-.aside ul li + li {
-  margin-top: 4px;
-}
-
-.aside ul li mat-icon {
-  margin-right: 3px;
+@keyframes table-appear {
+  from {
+    transform: translateX(-5px);
+  }
+  to{
+    transform: translateX(0px);
+  }
 }
 
 @media only screen and (max-width: 400px) {
