Update manage component - add method to log out and to edit

--- a/knowledge-base-web/src/app/features/article/article.component.html
+++ b/knowledge-base-web/src/app/features/article/article.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="!error">
   <kb-header></kb-header>
-
+<div *ngIf="!error && loaded">
   <div class="container">
     <main>
       <article>
